--- a/requirements.txt
+++ b/requirements.txt
@@ -8,3 +8,7 @@ django-debug-toolbar==0.9.4
 django-dynamic-fixture==1.6.3
 pinocchio==0.3.1
 ipdb==0.7
+WebTest==1.4.0
+Werkzeug==0.8.3
+django-webtest==1.5.4
+pinocchio==0.3.1
