--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,15 @@
-South==0.7.3
+# Testing
 mock
+coverage
+django-nose>=1.1,<1.2
+django-dynamic-fixture>=1.6.5,<1.7
+pinocchio>=0.3.1,<0.4
+WebTest>=2.0.4,<2.1
+django-webtest>=1.6.1,<1.7
+
+# Development
 flake8
-coverage==3.5.1
-django-nose==1.0
-nose==1.1.2
-django-extensions==0.8
-django-debug-toolbar==0.9.4
-django-dynamic-fixture==1.6.3
-pinocchio==0.3.1
-ipdb==0.7
-WebTest==1.4.0
-Werkzeug==0.8.3
-django-webtest==1.5.4
+django-extensions
+Werkzeug
+django-debug-toolbar
+ipdb
