--- a/tox.ini
+++ b/tox.ini
@@ -10,15 +10,15 @@ envlist = oscar-0.5, oscar-0.6, oscar-0.7
 commands = python runtests.py []
 
 [testenv:oscar-0.5]
-deps = -r{toxinidir}/requirements.txt
+deps = -r{toxinidir}/requirements.testing.txt
        django-oscar>=0.5,<0.6
 
 [testenv:oscar-0.6]
-deps = -r{toxinidir}/requirements.txt
+deps = -r{toxinidir}/requirements.testing.txt
        django-oscar==0.6
        django>=1.6
 
 [testenv:oscar-0.7]
-deps = -r{toxinidir}/requirements.txt
+deps = -r{toxinidir}/requirements.testing.txt
        https://github.com/tangentlabs/django-oscar/archive/master.tar.gz
        django>=1.6
