Use a matrix on Travis to test Oscar/Django combinations

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,28 @@
 language: python
+
 python:
-  - 2.6
-  - 2.7
+    - 2.6
+    - 2.7
+
+env:
+    matrix:
+        # Test against each permitted Oscar/Django combination
+        # Oscar 0.5
+        - OSCAR="django-oscar>=0.5,<0.6" DJANGO="Django>=1.4,<1.5"
+        # Oscar 0.6
+        - OSCAR="django-oscar>=0.6,<0.7" DJANGO="Django>=1.4,<1.5"
+        - OSCAR="django-oscar>=0.6,<0.7" DJANGO="Django>=1.5,<1.6"
+        - OSCAR="django-oscar>=0.6,<0.7" DJANGO="Django>=1.6,<1.7"
+        # Oscar 0.7
+        - OSCAR="django-oscar>=0.7,<0.8" DJANGO="Django>=1.5,<1.6"
+        - OSCAR="django-oscar>=0.7,<0.8" DJANGO=Django>=1.6,<1.7"
+
 install:
-  - make install
+    - make install
+    - pip install $OSCAR $DJANGO
+
 script:
-  - coverage run ./runtests.py
+    - coverage run ./runtests.py
+
 after_success:
-  - coveralls
+    - coveralls
