--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,13 @@ language: python
 
 python:
     - 2.7
+    - 3.3
+    - 3.4
+
+matrix:
+    allow_failures:
+        - python: 3.3
+        - python: 3.4
 
 install:
     - make install
