--- a/.travis.yml
+++ b/.travis.yml
@@ -6,15 +6,18 @@ python:
     - 2.7
     - 3.3
     - 3.4
+    - 3.5
 
-matrix:
-    allow_failures:
-        - python: 3.3
-        - python: 3.4
+env:
+    matrix:
+        - DJANGO=Django==1.7.8
+        - DJANGO=Django==1.8.4
+        - OSCAR=django-oscar==1.1.1
 
 install:
-    - make install
-    - pip install "django-oscar>=1.0,<1.1" "Django>=1.7,<1.8"
+    - pip install $DJANGO $OSCAR
+    - pip install -r requirements.testing.txt
+    - pip install .
 
 script:
     - coverage run ./runtests.py
