--- a/.travis.yml
+++ b/.travis.yml
@@ -9,9 +9,13 @@ python:
     - 3.5
 
 env:
-    matrix:
-        - DJANGO=Django==1.7.8
-        - DJANGO=Django==1.8.4
+    - DJANGO=Django==1.7.8
+    - DJANGO=Django==1.8.4
+
+matrix:
+    exclude:
+        - python: 3.5
+          env: DJANGO=Django==1.7.8
 
 before_install:
     - pip install codecov
