--- a/requirements.sandbox.txt
+++ b/requirements.sandbox.txt
@@ -14,7 +14,7 @@ django-oscar==1.1.1
 django-tables2==1.0.4     # via django-oscar
 django-treebeard==3.0     # via django-oscar
 django-widget-tweaks==1.3  # via django-oscar
-django==1.8.4
+Django==1.8.11            # via django-extra-views, django-haystack, django-oscar, django-tables2, django-treebeard
 factory-boy==2.4.1        # via django-oscar
 mock==1.0.1               # via django-oscar
 phonenumbers==6.3.0       # via django-oscar
