--- a/requirements.sandbox.txt
+++ b/requirements.sandbox.txt
@@ -5,15 +5,13 @@
 #    pip-compile requirements.sandbox.in
 #
 babel==1.3                # via django-oscar
-django-appconf==1.0.1     # via django-compressor
-django-compressor==1.5    # via django-oscar
 django-extensions==1.5.7
 django-extra-views==0.6.4  # via django-oscar
 django-haystack==2.3.1    # via django-oscar
-django-oscar==1.1.1
+django-oscar==1.2rc1
 django-tables2==1.0.4     # via django-oscar
-django-treebeard==3.0     # via django-oscar
-django-widget-tweaks==1.3  # via django-oscar
+django-treebeard==4.0     # via django-oscar
+django-widget-tweaks==1.4.1  # via django-oscar
 Django==1.8.11            # via django-extra-views, django-haystack, django-oscar, django-tables2, django-treebeard
 factory-boy==2.4.1        # via django-oscar
 mock==1.0.1               # via django-oscar
@@ -21,7 +19,7 @@ phonenumbers==6.3.0       # via django-oscar
 pillow==2.7.0             # via django-oscar
 purl==1.1                 # via django-oscar
 pytz==2015.4              # via babel
-six==1.9.0                # via django-appconf, django-extensions, django-tables2, purl
-sorl-thumbnail==12.2      # via django-oscar
+six==1.9.0                # via django-extensions, django-tables2, purl
+sorl-thumbnail==12.4a1    # via django-oscar
 unidecode==0.4.18         # via django-oscar
 werkzeug==0.10.4
