--- a/tox.ini
+++ b/tox.ini
@@ -4,20 +4,10 @@
 # and then run "tox" from this directory.
 
 [tox]
-envlist = oscar-0.5, oscar-0.6, oscar-0.7
+envlist = {py27,py33,py34}-{1.8,1.9}
 
 [testenv]
-commands = python runtests.py []
-
-[testenv:oscar-0.5]
+commands = python runtests.py 
 deps = -r{toxinidir}/requirements.testing.txt
-       django-oscar>=0.5,<0.6
-
-[testenv:oscar-0.6]
-deps = -r{toxinidir}/requirements.testing.txt
-       django-oscar==0.6.5
-       django>=1.6
-
-[testenv:oscar-0.7]
-deps = -r{toxinidir}/requirements.testing.txt
-       django-oscar==0.7.2
+       1.8: django==1.8.11
+       1.9: django==1.9.4
