--- a/requirements.sandbox.txt
+++ b/requirements.sandbox.txt
@@ -5,7 +5,6 @@
 #    pip-compile requirements.sandbox.in
 #
 babel==1.3                # via django-oscar
-django-extensions==1.5.7
 django-extra-views==0.6.4  # via django-oscar
 django-haystack==2.3.1    # via django-oscar
 django-oscar==1.2rc1
@@ -19,7 +18,6 @@ phonenumbers==6.3.0       # via django-oscar
 pillow==2.7.0             # via django-oscar
 purl==1.1                 # via django-oscar
 pytz==2015.4              # via babel
-six==1.9.0                # via django-extensions, django-tables2, purl
-sorl-thumbnail==12.4a1    # via django-oscar
+six==1.9.0                # via django-tables2, purl
+sorl-thumbnail==12.3      # via django-oscar
 unidecode==0.4.18         # via django-oscar
-werkzeug==0.10.4
