--- a/setup.cfg
+++ b/setup.cfg
@@ -3,7 +3,7 @@ universal=1
 
 [pytest]
 python_files=test_*.py *tests.py
-norecursedirs = .* *.egg sites src
+testpaths = tests/
 
 [flake8]
 max-line-length=99
