--- a/requirements.sandbox.txt
+++ b/requirements.sandbox.txt
@@ -7,7 +7,7 @@
 Babel==1.3                # via django-oscar
 django-extra-views==0.6.4  # via django-oscar
 django-haystack==2.4.1    # via django-oscar
-django-oscar==1.2rc1
+django-oscar==1.2
 django-tables2==1.0.7     # via django-oscar
 django-treebeard==4.0     # via django-oscar
 django-widget-tweaks==1.4.1  # via django-oscar
