Update to work with Oscar 1.5 and Django 1.11

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@
 dist/*
 build/*
 *.egg-info
+.eggs
 
 # Sandbox
 sandbox/db.sqlite
@@ -12,5 +13,5 @@ settings_local.py
 
 # Testing
 .coverage
-.coveralls.yml
 .tox
+.cache
