--- a/setup.cfg
+++ b/setup.cfg
@@ -1,11 +1,11 @@
 [bdist_wheel]
 universal=1
 
-[pytest]
+[tool:pytest]
 python_files=test_*.py *tests.py
 testpaths = tests/
 
 [flake8]
-max-line-length=99
-exclude=./accounts/**/migrations/*.py,tests/*
+max-line-length=159
+exclude=*migrations*
 ignore=E731
