--- a/tox.ini
+++ b/tox.ini
@@ -1,13 +1,27 @@
-# Tox (http://tox.testrun.org/) is a tool for running tests
-# in multiple virtualenvs. This configuration file will run the
-# test suite on all supported python versions. To use it, "pip install tox"
-# and then run "tox" from this directory.
-
 [tox]
-envlist = {py27,py33,py34}-{1.8,1.9}
+envlist = py{27,33,34,35}-django18,py{27,34,35}-django110,py{27,34,35,36}-django111
 
 [testenv]
-commands = python runtests.py 
-deps = -r{toxinidir}/requirements.testing.txt
-       1.8: django==1.8.11
-       1.9: django==1.9.4
+commands = coverage run --parallel -m pytest {posargs}
+deps =
+    -r{toxinidir}/requirements.txt
+    django18: django>=1.8,<1.9
+    django110: django>=1.10,<1.11
+    django111: django>=1.11,<1.12
+
+[testenv:lint]
+basepython = python3.5
+deps =
+    flake8
+    isort
+commands =
+    flake8 src tests setup.py
+    isort -q --recursive --diff src tests setup.py
+
+[testenv:coverage-report]
+basepython = python3.5
+deps = coverage
+skip_install = true
+commands =
+    coverage combine
+    coverage report
