--- a/tox.ini
+++ b/tox.ini
@@ -1,12 +1,10 @@
 [tox]
-envlist = py{27,34,35}-django18,py{27,34,35}-django110,py{27,34,35,36}-django111
+envlist = py{27,34,35,36}-django111
 
 [testenv]
 commands = coverage run --parallel -m pytest {posargs}
 deps =
     -r{toxinidir}/requirements.txt
-    django18: django>=1.8,<1.9
-    django110: django>=1.10,<1.11
     django111: django>=1.11,<1.12
 
 [testenv:lint]
