--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,8 @@ matrix:
       env: TOXENV=py35-django2
     - python: 3.6
       env: TOXENV=py36-django2
+    - python: 3.6
+      env: TOXENV=py36-django21
 
     - python: 3.6
       env: TOXENV=lint
