--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py{27,35,36}-django{111,2}
+envlist = py{27,35,36}-django{111,2,21}
 
 [testenv]
 commands = coverage run --parallel -m pytest {posargs}
@@ -7,6 +7,7 @@ deps =
     -r{toxinidir}/requirements.txt
     django111: django>=1.11,<1.12
     django2: django>=2,<2.1
+    django21: django>=2.1,<2.2
 
 [testenv:lint]
 basepython = python3.6
