--- a/.travis.yml
+++ b/.travis.yml
@@ -3,21 +3,25 @@ sudo: false
 
 matrix:
   include:
-    - python: 2.7
-      env: TOXENV=py27-django111
     - python: 3.5
       env: TOXENV=py35-django111
     - python: 3.6
       env: TOXENV=py36-django111
+    - python: 3.7
+      env: TOXENV=py37-django111
     - python: 3.5
-      env: TOXENV=py35-django2
+      env: TOXENV=py35-django22
     - python: 3.6
-      env: TOXENV=py36-django2
-    - python: 3.6
-      env: TOXENV=py36-django21
+      env: TOXENV=py36-django22
+    - python: 3.7
+      env: TOXENV=py37-django22
 
     - python: 3.6
       env: TOXENV=lint
+
+branches:
+  only:
+    - master
 
 install:
     - pip install tox codecov
