--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
-django-oscar>=1.5,<1.7
+django-oscar>=2.0,<2.1
 
 # Testing
 coverage==4.5.1
 django-webtest==1.9.3
 factory-boy>=2.10,<2.11
-mock==2.0.0
-pytest-django>=3.2,<3.3
+pytest-django>=3.5,<3.6
 tox>=2.9,<2.10
+freezegun>=0.3,<0.4
+sorl-thumbnail
