--- a/setup.cfg
+++ b/setup.cfg
@@ -1,11 +1,14 @@
-[bdist_wheel]
-universal=1
-
 [tool:pytest]
 python_files=test_*.py *tests.py
 testpaths = tests/
+filterwarnings =
+  ignore::pytest.PytestDeprecationWarning
 
 [flake8]
 max-line-length=159
-exclude=*migrations*
+exclude=
+  *migrations*
+  build/
+  dist/
+  .eggs/
 ignore=E731
