--- a/tox.ini
+++ b/tox.ini
@@ -1,13 +1,12 @@
 [tox]
-envlist = py{27,35,36}-django{111,2,21}
+envlist = py{35,36,37}-django{111,22}
 
 [testenv]
 commands = coverage run --parallel -m pytest {posargs}
 deps =
     -r{toxinidir}/requirements.txt
     django111: django>=1.11,<1.12
-    django2: django>=2,<2.1
-    django21: django>=2.1,<2.2
+    django22: django>=2.2,<2.3
 
 [testenv:lint]
 basepython = python3.6
@@ -16,7 +15,7 @@ deps =
     isort
 commands =
     flake8 src tests setup.py
-    isort -q --recursive --diff src tests setup.py
+    isort -q -c --recursive --diff src tests setup.py
 
 [testenv:coverage-report]
 basepython = python3.6
