Declare support for Oscar 2.1, Django 3. Clean up deprecated Python 2 code.

--- a/tox.ini
+++ b/tox.ini
@@ -1,24 +1,23 @@
 [tox]
-envlist = py{35,36,37}-django{111,22}
+envlist = py{36,37,38}-django{22,30}
 
 [testenv]
 commands = coverage run --parallel -m pytest {posargs}
 deps =
     -r{toxinidir}/requirements.txt
-    django111: django>=1.11,<1.12
     django22: django>=2.2,<2.3
+    django30: django>=3.0,<3.1
 
 [testenv:lint]
-basepython = python3.6
+basepython = python3.7
 deps =
-    flake8
-    isort
+    -r{toxinidir}/requirements.txt
 commands =
     flake8 src tests setup.py
-    isort -q -c --recursive --diff src tests setup.py
+    isort -q -c --diff src tests setup.py
 
 [testenv:coverage-report]
-basepython = python3.6
+basepython = python3.7
 deps = coverage
 skip_install = true
 commands =
