--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,14 @@
-django-oscar>=2.0,<2.1
+django-oscar>=2.1,<2.2
 
 # Testing
 coverage==5.2
 django-webtest==1.9.7
 factory-boy>=2.10,<2.13
 pytest-django>=3.5,<3.10
-tox>=2.9,<3.15
+tox>=3.17,<3.18
 freezegun>=0.3,<0.4
 sorl-thumbnail
+
+# Linting
+isort>=5.1,<5.2
+flake8>=3.8,<3.9
